--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "execute": "tsc && node --env-file=.env dist/main.js"
+    "build": "tsc",
+    "dev": "npx tsx --env-file=.env src/main.ts",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
