--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "npx tsx --env-file=.env src/main.ts",
-    "start": "node dist/main.js"
+    "start": "tsc && node dist/main.js"
   },
   "keywords": [],
   "author": "",
